--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body{
-    background-color: blue;
+    font-family: Raleway, sans-serif;
+    /* font-family: Roboto, sans-serif; */
+    background-color: white;
 }
 /* без точек */
 .list{
